--- a/references.bib
+++ b/references.bib
@@ -391,3 +391,30 @@
   language = {en},
   number = {6},
 }
+@Article{ruggerone2018,
+  title = {Numbers and {{Biomass}} of {{Natural}}- and {{Hatchery}}-{{Origin Pink Salmon}}, {{Chum Salmon}}, and {{Sockeye Salmon}} in the {{North Pacific Ocean}}, 1925\textendash 2015},
+  author = {Gregory T. Ruggerone and James R. Irvine},
+  year = {2018},
+  volume = {10},
+  pages = {152--168},
+  issn = {1942-5120},
+  doi = {10.1002/mcf2.10023},
+  copyright = {\textcopyright{} 2018 The Authors.},
+  file = {/Users/danovan/Zotero/storage/SHTQ9HB3/Ruggerone and Irvine - 2018 - Numbers and Biomass of Natural- and Hatchery-Origi.pdf;/Users/danovan/Zotero/storage/G7TJPKP9/mcf2.html},
+  journal = {Marine and Coastal Fisheries},
+  language = {en},
+  number = {2},
+}
+@Article{sugihara1994,
+  title = {Nonlinear Forecasting for the Classification of Natural Time Series},
+  author = {George Sugihara and Bryan Thomas Grenfell and Robert McCredie May and H. Tong},
+  year = {1994},
+  month = {sep},
+  volume = {348},
+  pages = {477--495},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rsta.1994.0106},
+  file = {/Users/danovan/Google Drive/references/Sugihara et al. - 1994 - Nonlinear forecasting for the classification of na.pdf;/Users/danovan/Zotero/storage/DIV8C5MY/rsta.1994.html},
+  journal = {Philosophical Transactions of the Royal Society of London. Series A: Physical and Engineering Sciences},
+  number = {1688},
+}
