first full draft of manuscript

--- a/references.bib
+++ b/references.bib
@@ -418,3 +418,56 @@
   journal = {Philosophical Transactions of the Royal Society of London. Series A: Physical and Engineering Sciences},
   number = {1688},
 }
+@Article{breiman2001,
+  title = {Random {{Forests}}},
+  author = {Leo Breiman},
+  year = {2001},
+  month = {oct},
+  volume = {45},
+  pages = {5--32},
+  issn = {0885-6125, 1573-0565},
+  doi = {10.1023/A:1010933404324},
+  file = {/Users/danovando/Desktop/Bren/SFG Work/General Library/Reference Library/Breiman - 2001 - Random Forests.pdf},
+  journal = {Machine Learning},
+  keywords = {Artificial Intelligence (incl. Robotics),Automation and Robotics,classification,Computing Methodologies,Ensemble,Language Translation and Linguistics,regression,Simulation and Modeling},
+  language = {en},
+  number = {1},
+}
+
+@Article{breiman2001,
+  title = {Random {{Forests}}},
+  author = {Leo Breiman},
+  year = {2001},
+  month = {oct},
+  volume = {45},
+  pages = {5--32},
+  issn = {1573-0565},
+  doi = {10.1023/A:1010933404324},
+  journal = {Machine Learning},
+  keywords = {classification,ensemble,regression},
+  language = {en},
+  number = {1},
+}
+
+@Manual{chen2020,
+    title = {xgboost: Extreme Gradient Boosting},
+    author = {Tianqi Chen and Tong He and Michael Benesty and Vadim Khotilovich and Yuan Tang and Hyunsu Cho and Kailong Chen and Rory Mitchell and Ignacio Cano and Tianyi Zhou and Mu Li and Junyuan Xie and Min Lin and Yifeng Geng and Yutian Li},
+    year = {2020},
+    note = {R package version 1.1.1.1},
+    url = {https://CRAN.R-project.org/package=xgboost},
+}
+@Article{ward2014,
+  title = {Complexity Is Costly: A Meta-Analysis of Parametric and Non-Parametric Methods for Short-Term Population Forecasting},
+  shorttitle = {Complexity Is Costly},
+  author = {Eric J. Ward and Eli E. Holmes and James T. Thorson and Ben Collen},
+  year = {2014},
+  volume = {123},
+  pages = {652--661},
+  issn = {1600-0706},
+  doi = {10.1111/j.1600-0706.2014.00916.x},
+  copyright = {Published 2014. This article is a US Government work and is in the public domain in the USA},
+  file = {/Users/danovan/Google Drive/references/Ward et al. - 2014 - Complexity is costly a meta-analysis of parametri.pdf;/Users/danovan/Zotero/storage/57J5WB7C/j.1600-0706.2014.00916.html},
+  journal = {Oikos},
+  language = {en},
+  number = {6},
+}
