peter and curry changes incorporated, still need to edit down to nature requirements

--- a/references.bib
+++ b/references.bib
@@ -471,3 +471,24 @@
   language = {en},
   number = {6},
 }
+@TechReport{mcdowellgroup2018,
+  title = {Bristol {{Bay Sockeye Market Report}}},
+  author = {{McDowell Group}},
+  year = {2018},
+}
+@Article{elith2008,
+  title = {A Working Guide to Boosted Regression Trees},
+  author = {J. Elith and J. R. Leathwick and T. Hastie},
+  year = {2008},
+  volume = {77},
+  pages = {802--813},
+  issn = {1365-2656},
+  doi = {10.1111/j.1365-2656.2008.01390.x},
+  annotation = {\_eprint: https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2656.2008.01390.x},
+  copyright = {\textcopyright{} 2008 The Authors. Journal compilation \textcopyright{} 2008 British Ecological Society},
+  file = {/Users/danovan/Google Drive/references/Elith et al. - 2008 - A working guide to boosted regression trees.pdf;/Users/danovan/Zotero/storage/ZI2BI65Q/j.1365-2656.2008.01390.html},
+  journal = {Journal of Animal Ecology},
+  keywords = {data mining,machine learning,model averaging,random forests,species distributions},
+  language = {en},
+  number = {4},
+}
